# meat-thermometer

./: .gitignore  Grill Journal.md  URHProject.xml  pyproject.toml  scratchpad.ipynb
urh/: URHProject.xml
